--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
     "multer": "^1.4.5-lts.1",
+    "resend": "^4.0.1",
     "sharp": "^0.33.5",
     "socket.io": "^4.7.2",
     "xss": "^1.0.15"
